# xsd-tools

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.txt  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  build-conan.sh  conanfile.txt  revitalize-A.md  revitalize-E.md  revitalize-GH.md  revitalize-I.md  revitalize-genperf.md  revitalize-parser-simplify.md  revitalize-simplify.md  revitalize.md
.github/workflows/: _build-unix.yml  _build-windows.yml  build-and-test.yml  ci-linux-arm64.yml  ci-linux-x86_64.yml  ci-macos-arm64.yml  ci-macos-x86_64.yml  ci-windows-arm64.yml  ci-windows-x86_64.yml  release.yml
cmake/: GitVersion.cmake  Packaging.cmake  Version.cmake  lua-CMakeLists.txt  tinyxml-CMakeLists.txt
cmake/patches/: luanum-5.1.5.patch  lundump-signedchar-5.1.5.patch
docs/: limitations.md
docs/templates/: c-json-jsonc.md  c-xml-expat-dom.md  c-xml-expat.md  cpp-json-jsonc.md  cpp-xml-expat.md  java-json.md  java-xml-stax.md  python-json.md  python-sax.md  ts-xml.md
examples/: README.md  library.xsd
examples/quickstart/: .gitignore  CMakeLists.txt  Ep3Relay.java  README.md  ep1_producer.py  ep2_relay.c  ep2_relay.cpp  ep4_relay.py  ep5_sink.cpp  message.xsd  relay_util.hpp  run.sh
helper-scripts/: xsdb-c-wrapper.sh  xsdb-java-wrapper.sh
pkg/: build-packages.sh
pkg/flatpak/: build-flatpak.sh  com.qvxlabs.xsd_tools.yaml
pkg/rpm/: build-rpm.sh
pkg/rpm/SPECS/: xsd-tools.spec
src/: luaScriptAdapter.cpp  luaScriptAdapter.hpp  main.cpp  resource.cpp  resource.hpp  resource_config.hpp.in  util.cpp  util.hpp  version.h.in  xsdtools.cpp  xsdtools.hpp
src/Processors/: ArrayType.cpp  ArrayType.hpp  ElementExtracter.cpp  ElementExtracter.hpp  LuaAdapter.cpp  LuaAdapter.hpp  LuaProcessor.cpp  LuaProcessor.hpp  LuaProcessorBase.cpp  LuaProcessorBase.hpp  RestrictionVerify.cpp  RestrictionVerify.hpp  SimpleTypeExtracter.cpp  SimpleTypeExtracter.hpp
src/TemplateEngine/: parser.lua  safeEnv.lua  string.lua  stringbuffer.lua  table.lua  templateEngine.lua
src/XSDParser/: Exception.cpp  Exception.hpp  Parser.cpp  Parser.hpp  ProcessorBase.hpp  Types.cpp  Types.hpp  TypesDB.cpp  TypesDB.hpp  XsdQName.hpp
src/XSDParser/Elements/: All.cpp  All.hpp  Annotation.cpp  Annotation.hpp  Any.cpp  Any.hpp  AppInfo.cpp  (+66 more)
templates/: c-json-jsonc  c-json-jsonc-test  c-json-jsonc.template  c-json-jsonc.template-test  c-xml-expat  c-xml-expat-dom  c-xml-expat-dom-test  c-xml-expat-dom.template  c-xml-expat-dom.template-test  c-xml-expat-test  cpp-json-jsonc  cpp-json-jsonc-test  cpp-json-jsonc.template  cpp-json-jsonc.template-test  cpp-xml-expat  cpp-xml-expat-test  java-json.org  java-json.org-test  java-json.org.tmpl  java-json.org.tmpl-test  java-xml-stax  java-xml-stax-test  java-xml-stax.tmpl  java-xml-stax.tmpl-test  main  python-json  python-json-test  python-json.tmpl  python-json.tmpl-test  python-sax  python-sax-test  test  ts-xml  ts-xml-test  ts-xml.tmpl  ts-xml.tmpl-test
templates/c-json-jsonc/: base64  bool  c_type_info  char_p  double  float  hex  int16t  int32t  int64t  int8t  list  longdouble  uint16t  uint32t  uint64t  uint8t
templates/c-xml-expat-dom/: base64  boolean  byte  complexType  cstring  double  float  hex  int  integer  list  shared  short  types  unsignedByte  unsignedInt  unsignedInteger  unsignedShort
templates/c-xml-expat-sax/: base64  bool  c_type_info  char_p  double  float  hex  int16t  int32t  int64t  int8t  list  longdouble  uint16t  uint32t  uint64t  uint8t
templates/cpp-json-jsonc/: base64  char_p  cpp_type_info  hex  int16t  int8t  uint8t
templates/cpp-xml-expat-sax/: cpp_type_info
templates/java-json.org/: json-transform.lua  parse.lua
templates/java-xml-stax/: bool  java_type_info  list_int
templates/python-json/: int  list_bool  long  python_type_info  string
templates/python-xml/: base64  bool  float  hex  int  list_base64  list_bool  list_float  list_hex  list_int  list_long  list_string  long  python_type_info  string
templates/shared/: doc  facets  schemaEx  trnsfrm_old
templates/ts-xml/: bigint  list_bigint  list_bool  list_number  ts_type_info
test/: CMakeLists.txt  c-xml-expat-dom-test.py  c-xml-expat-test.py  conio.py  elementTests.cpp  facetTests.cpp  gen_roundtrip_tests.py  generateTests.cpp  java-json.org-test.py  parserTests.cpp  python-sax-test.py  resourceTests.cpp  roundtrip_util.cpp  roundtrip_util.hpp  run_parallel.py  test_framework.py  xsdparse-test.py
test/c-xml-expat-dom/: test.mk
test/java-json.org.tmpl/: pom.xml
test/java-xml-stax/: pom.xml
test/stress/: fetch_schemas.sh  run_stress.py
test/ts-xml/: package.json  tsconfig.json
test/xsd-facets/: README.md  facet_range.xsd
test/xsd-negative/: bug_http_import.xsd  bug_no_root.xsd  bug_unknown_tag.xsd  cyclic_extension.xsd  nsImportMissing.xsd
test/xsd-positive/: bug_annotation_docs.xsd  bug_any_attribute.xsd  bug_attribute_group.xsd  bug_doc_markup.xsd  bug_dup_struct_names.xsd  bug_group_ref.xsd  bug_identity_constraints.xsd  bug_mixed_attribute.xsd  bug_notation.xsd  bug_restriction_annotation.xsd  bug_union.xsd  facet_attr.xsd  facet_enum.xsd  facet_enum_large.xsd  facet_int16.xsd  facet_pattern.xsd  facet_strlen.xsd  facet_uint16.xsd  facet_uint8.xsd  hardAll.xsd  hardChoice.xsd  hardFacets.xsd  hardInherit.xsd  hardListUnion.xsd  hardRecursive.xsd  nsImport.xsd  nsTargetDefault.xsd  nsTargetPrefixed.xsd  shared_base_extension.xsd
test/xsd-recursive/: cyclic_self.xsd  cyclic_type.xsd
test/xsdparse/: allMembers.xsd  attrAnnotation.xsd  elemA016.out  elemB002.out  elemE009.out  elemG003.out  elemJ009.out  elemT039.out  elemT058.out  facet_override.xsd  facet_precision.xsd  inclDefaultNsTypes.xsd  inclPrefixed.xsd  inclPrefixedTypes.xsd  nsImport.out  nsTargetDefault.out  nsTargetPrefixed.out  ref_occurs.xsd  stH004.out  substRefInvalid.xsd  substRefValid.xsd  testA001.out  testA002.out  testA004.out  testA005.out  testA006.out  testA008.out  testA009.out  testA010.out  testA012.out  testA014.out  testA015.out  testA016.out  testA017.out  testA018.out  testA019.out  testA020.out  testA021.out  testA022.out  testA023.out  (+11 more)
(+101 files in other folders)
